# Quant_client

./: DATABASE_SETUP.md  Developer_Context.md  README.md  SETUP_MACOS.md  SETUP_WINDOWS.md  package-lock.json  phase3_summary.md
.cursor/: .cursorrules
backend/: Cargo.toml
backend/docs/: api_v2.md  phase4_summary.md
backend/src/: lib.rs  main.rs
backend/src/auth/: client.rs  google.rs  mod.rs  session.rs
backend/src/backup/: email.rs
backend/src/cache/: mod.rs
backend/src/db/: email.rs  init.rs  labels.rs  migrations.rs  mod.rs  users.rs
backend/src/encryption/: keys.rs  mod.rs
backend/src/gmail/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  email.rs  label.rs  mod.rs  user.rs  welcome.rs
backend/src/models/: auth.rs  email.rs  label.rs  mod.rs  response.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  AuthContext.tsx  Dashboard.tsx  Login.tsx  Welcome.tsx  index.css
frontend/src/components/: ComposeEmail.tsx  EmailDetail.tsx  EmailListItem.tsx  Inbox.tsx
frontend/src/components/email/: ComposeEmail.tsx  EmailDetail.tsx  EmailListItem.tsx  Inbox.tsx  Message.tsx  MessagesList.tsx  PlaceholderMessage.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Sidebar.tsx  index.ts
frontend/src/components/modals/: LogoutConfirmationModal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Welcome.tsx  index.ts
frontend/src/services/: EmailService.ts
frontend/src/types/: Email.ts
frontend/src/utils/: emailUtils.ts  index.ts  profileUtils.ts
(+2 files in other folders)
