[package]
name = "quantum-email-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
oauth2 = "4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
time = "0.3"
futures = "0.3"
log = "0.4"
base64 = "0.13"
